--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ chardet==3.0.4
 defusedxml==0.5.0
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==2.1
+django==2.1.6
 django-allauth==0.36.0
 django-gravatar2==1.4.2
 google-api-python-client==1.7.4
@@ -14,7 +14,7 @@ psycopg2==2.7.5
 python-decouple==3.1
 python3-openid==3.1.0
 pytz==2018.5
-requests==2.19.1
+requests==2.20.0
 requests-oauthlib==1.0.0
 spotipy==2.4.4
 static3==0.7.0
