--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ chardet==3.0.4
 defusedxml==0.5.0
 dj-database-url==0.5.0
 dj-static==0.0.6
-django==2.1.6
+Django==2.1.7
 django-allauth==0.36.0
 django-gravatar2==1.4.2
 google-api-python-client==1.7.4
